[package]
name = "bitcoin_slices"
version = "0.4.5"
edition = "2021"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Parse Bitcoin objects without allocations"
repository = "https://github.com/RCasatta/bitcoin_slices"
documentation = "https://docs.rs/bitcoin_slices/"
keywords = ["bitcoin", "blocks", "transaction", "parse", "slices"]
readme = "README.md"
license = "MIT"

[dependencies]
bitcoin_hashes = { version="0.11", optional = true }
sha2 = { version= "0.10", optional = true }
bitcoin = { version="0.29", optional = true }
redb = { version = "0.13.0", optional = true }

[features]
default = []
bitcoin_hashes = ["dep:bitcoin_hashes"]
sha2 = ["dep:sha2"]
redb = ["dep:redb"]
bitcoin = ["dep:bitcoin"]

[dev-dependencies]
hex_lit = {version = "0.1", features = [ "rust_v_1_46" ] }
bitcoin = { version="0.29", features = [ "rand" ] }
bitcoin-test-data = "0.2.0"
tempfile = "3.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
