[package]
name = "bitcoin_slices"
version = "0.6.2"
edition = "2021"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Parse Bitcoin objects without allocations"
repository = "https://github.com/RCasatta/bitcoin_slices"
documentation = "https://docs.rs/bitcoin_slices/"
keywords = ["bitcoin", "blocks", "transaction", "parse", "slices"]
categories = ["no-std", "cryptography::cryptocurrencies", "encoding"]
readme = "README.md"
license = "MIT"

[dependencies]
bitcoin_hashes = { version = "0.13", optional = true }
sha2 = { version = "0.10", optional = true }
bitcoin = { version = "0.31.0", optional = true }
redb = { version = "1.0", optional = true }
hashbrown = { version = "0.14", optional = true }

[features]
default = []
bitcoin_hashes = ["dep:bitcoin_hashes"]
sha2 = ["dep:sha2"]
redb = ["dep:redb"]
bitcoin = ["dep:bitcoin", "bitcoin_hashes"]
slice_cache = ["dep:hashbrown"]

[dev-dependencies]
hex_lit = { version = "0.1", features = ["rust_v_1_46"] }
bitcoin = { version = "0.31.0", features = ["rand"] }
bitcoin-test-data = "0.2.0"
tempfile = "3.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
